WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26831
Fix compiler warning in WorkerLoaderProxy.h
https://bugs.webkit.org/show_bug.cgi?id=26831
Summary
Fix compiler warning in WorkerLoaderProxy.h
Xan Lopez
Reported
2009-06-29 23:58:45 PDT
Try to fix the following warning in ../../WebCore/workers/WorkerLoaderProxy.h:40: warning: declaration ‘class WebCore::ScriptExecutionContext::Task’ does not declare anything. Explanation in the attached patch.
Attachments
fixwarning.patch
(2.16 KB, patch)
2009-06-29 23:59 PDT
,
Xan Lopez
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2009-06-29 23:59:11 PDT
Created
attachment 32035
[details]
fixwarning.patch Fix warning.
David Levin
Comment 2
2009-06-30 00:20:02 PDT
Comment on
attachment 32035
[details]
fixwarning.patch Please add a link to the bug in the changelog.
Xan Lopez
Comment 3
2009-06-30 00:24:43 PDT
Landed as
r45365
with URL added to the ChangeLog, thanks.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug